<resources>
    <string name="app_name">RotiKing Admin</string>
    <string name="admin_login">Admin Login</string>
    <string name="have_a_great_lunch">Have a great lunch</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="terms_privacy">Terms | Privacy</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recover">Recover</string>
    <string name="orders">Orders</string>
    <string name="foods">Foods</string>
    <string name="toppings">Toppings</string>
    <string name="profile">Profile</string>
    <string name="dispatcher">Dispatcher</string>
    <string name="add_food">Add Food</string>
    <string name="click_on_food_icon_to_add_item_photo">Click on food icon to add item photo.</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="item_included_with_this_food_item">Item included with this food item</string>
    <string name="ingredients">Ingredients</string>
    <string name="food_type">Food Type</string>
    <string name="food_available">Food Available</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="rating">rating</string>
    <string name="food">Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="close">Close</string>
    <string name="delete_topping">Delete Topping</string>
    <string name="add_topping">Add Topping</string>
    <string name="topping_name">Topping Name</string>
    <string name="item_included_in_topping">Item included in Topping</string>
    <string name="discount_in_percent">Discount in percent</string>
    <string name="order_000000">#~order~000000</string>
    <string name="_0_items">0 Items</string>
    <string name="payment_method">Payment Method</string>
    <string name="preparing">preparing...</string>
    <string name="time">time</string>
    <string name="no_orders_yet">No Orders Yet.</string>
    <string name="order_detail">Order Detail</string>
    <string name="tracking">Tracking</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="ordered">Ordered...</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_price">Delivery Price</string>
    <string name="total_payable">Total Payable</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="no_name">No Name</string>
    <string name="no_address">No Address</string>
    <string name="no_phone">No Phone</string>
    <string name="cash">cash</string>
    <string name="allot_delivery_agent">Allot Delivery Agent</string>
    <string name="click_to_allot_a_delivery_agent">Click to allot a delivery agent to delivery this order.</string>
    <string name="accept_order">Accept Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_name">Order Name</string>
    <string name="delivery_agents">Delivery agents</string>
    <string name="add_delivery_agent_user">Add Delivery Agent User</string>
    <string name="agent_name">Agent Name</string>
    <string name="agent_phone">Agent Phone</string>
    <string name="agent_email">Agent Email</string>
    <string name="agent">Agent</string>
    <string name="select_a_delivery_agent">Select a delivery agent</string>
    <string name="cooking">Cooking</string>
    <string name="dispatched">Dispatched</string>
    <string name="on_way">On Way</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="logout">Logout</string>
    <string name="photo">Photo</string>
    <string name="shop_close">Shop Closed</string>
    <string name="no_food_items">No Food Items.</string>
    <string name="no_topping_items">No Topping Items</string>
    <string name="no_delivery_agent">No Delivery Agent.</string>
    <string name="paid_delivery">Paid Delivery</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="no_customer_query">No Customer Query.</string>
    <string name="customer_query">Customer Query</string>
    <string name="click_to_reply">Click to Reply</string>
    <string name="resent_otp">Resent OTP</string>
    <string-array name="food_type_entries">
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
    </string-array>
    <string-array name="food_available_entries">
        <item>Available</item>
        <item>Not available</item>
    </string-array>
</resources>