<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/ImgTextLogo" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/delete_food"
            android:layout_marginEnd="40dp"
            android:src="@drawable/ic_baseline_no_food_24" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_food"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:elevation="0dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/ic_baseline_fastfood_24"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_on_food_icon_to_add_item_photo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/food_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/food_name"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="10dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="start"
                android:hint="@string/description"
                android:padding="10dp"
                android:maxLines="2"
                android:background="@drawable/border_block"
                android:layout_marginTop="10dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/food_includes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/item_included_with_this_food_item"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="10dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ingredients"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="10dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/food_type"/>

            <Spinner
                android:id="@+id/food_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ingredients"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="5dp"
                android:entries="@array/food_type_entries"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/food_available"/>

            <Spinner
                android:id="@+id/available"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ingredients"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="5dp"
                android:entries="@array/food_available_entries"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price"/>

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/price"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="5dp"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/discount_in_percent"/>

            <EditText
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/discount"
                android:padding="10dp"
                android:background="@drawable/border_block"
                android:layout_marginTop="5dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/payable_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/red"
                android:text="@string/price"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_btn"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/save_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:visibility="invisible"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>